--- a/main.mustache
+++ b/main.mustache
@@ -2,24 +2,23 @@
 > neofetch
 ```
 
-<img align="left" src="https://i.redd.it/h7dae4o0uk461.jpg" alt="Bakaguya made by レヴィノス (https://www.pixiv.net/en/artworks/80962527)" width="320" /> 
+<img align="left" src="https://c.tenor.com/rbx3ph5SLRUAAAAi/pikachu-pokemon.gif" alt="pikachu waving" width="320" /> 
 
 ```csharp
-anordinaryusername@github
+taymazturkmen@github
 -------------------------
 OS: Arch Linux x86_64
 Shell: zsh 5.8
 Pronouns: He/Him
-Location: Artesia, CA
-Frameworks: React
-Languages: JavaScript, TypeScript,
+Location: Brunswick,Germany
+Languages: Java, Python,
            HTML, CSS
-Learning: Node.js, Express, PostgreSQL,
-          Three.js, CPP
-Hobbies: Gardening, Cooking, Gaming
+Learning: Node.js, PostgreSQL,
+          C, CPP
+Hobbies: Cybersecurity, Cooking, Gaming, Music
 Commits: {{ totalCommitsInPastYear }}
 Stars: {{ totalStars }}
-Discord: RandomPotato#1377
+Discord: Taymaz#1002
 ```
 <p align="left">
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
